--- a/analysis/Study1.qmd
+++ b/analysis/Study1.qmd
@@ -1915,9 +1915,9 @@ plot(rez_efa$n_fac)
 
 rez_hclust <- make_hclust(data1af)
 rez_ega <- make_ega(data1af, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
-rez_efa <- make_efa(data1af, n = 3, cols = c("F1" = colors[["Burp"]], "F2" = colors[["Urinate"]], 
+  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Wind"]], "C6" = colors[["Pain"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+rez_efa <- make_efa(data1af, n = 3, cols = c("F1"  colors[["Burp"]], "F2" = colors[["Urinate"]], 
                                             "F3" = colors[["Bruise"]]))
 rez_cfa1a  <- make_cfa(data1af)
 
@@ -1959,8 +1959,8 @@ rez_cfa1a$test
 
 rez_hclust <- make_hclust(data1b)
 rez_ega <- make_ega(data1b, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Defecate"]], "C3" = colors[["Bruise"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Wind"]], "C6" = colors[["Temp"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data1b, n = 4, cols = c("F1" = colors[["Urinate"]], "F2" = colors[["Bruise"]], 
                                             "F3" = colors[["Sneeze"]], "F4" = colors[["Wind"]]))
 
@@ -1998,8 +1998,8 @@ plot(rez_efa$n_fac)
 
 rez_hclust <- make_hclust(data1bf)
 rez_ega <- make_ega(data1af, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Wind"]], "C6" = colors[["Pain"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data1bf, n = 3, cols = c("F1" = colors[["Urinate"]], "F2" = colors[["Bruise"]], 
                                             "F3" = colors[["Cough"]], "F4" = colors[["Itch"]]))
 rez_cfa1b  <- make_cfa(data1bf)
@@ -2042,8 +2042,8 @@ rez_cfa1b$test
 
 rez_hclust <- make_hclust(data2)
 rez_ega <- make_ega(data2, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Urinate"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Pain"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data2, n = 4, cols = c("F1" = colors[["Cough"]], "F2" = colors[["Bruise"]], 
                                             "F3" = colors[["Heart"]], "F4" = colors[["Sex arousal"]]))
 
@@ -2081,8 +2081,8 @@ plot(rez_efa$n_fac)
 
 rez_hclust <- make_hclust(data2f)
 rez_ega <- make_ega(data2f, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Wind"]], "C6" = colors[["Pain"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data2f, n = 3, cols = c("F1" = colors[["Cough"]], "F2" = colors[["Bruise"]], 
                                             "F3" = colors[["Hungry"]]))
 rez_cfa2  <- make_cfa(data2f)
@@ -2125,8 +2125,8 @@ rez_cfa2$test
 
 rez_hclust <- make_hclust(data3)
 rez_ega <- make_ega(data3, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Urinate"]], "C3" = colors[["Pain"]], "C4" = colors[["Sneeze"]], 
+  "C5" = colors[["Wind"]], "C6" = colors[["Bruise"]], "C7" = colors[["Muscles"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data3, n = 4, cols = c("F1" = colors[["Cough"]], "F2" = colors[["Urinate"]], 
                                             "F3" = colors[["Blood Sugar"]], "F4" = colors[["Sex arousal"]]))
 
@@ -2164,8 +2164,8 @@ plot(rez_efa$n_fac)
 
 rez_hclust <- make_hclust(data3f)
 rez_ega <- make_ega(data3f, cols = c(
-  "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
-  "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
+  "C1" = colors[["Heart"]], "C2" = colors[["Urinate"]], "C3" = colors[["Sneeze"]], "C4" = colors[["Wind"]], 
+  "C5" = colors[["Pain"]], "C6" = colors[["Bruise"]], "C7" = colors[["Muscles"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data3f, n = 3, cols = c("F1" = colors[["Cough"]], "F2" = colors[["Hungry"]], 
                                             "F3" = colors[["Blood Sugar"]]))
 rez_cfa3  <- make_cfa(data3f)
@@ -3158,7 +3158,7 @@ Note: CFA errors.
 #| fig-height: 20
 
 rez_hclust <- make_hclust(data12f)
-rez_ega <- make_ega(data12f, cols = c(
+rez_ega <- make_ega(data8af, cols = c(
   "C1" = colors[["Heart"]], "C2" = colors[["Hungry"]], "C3" = colors[["Defecate"]], "C4" = colors[["Muscles"]], 
   "C5" = colors[["Cough"]], "C6" = colors[["Wind"]], "C7" = colors[["Bruise"]], "C8" = colors[["Blood Sugar"]]))
 rez_efa <- make_efa(data12f, n = 5, cols = c("F1" = colors[["Urinate"]], "F2" = colors[["Burp"]], 
